--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1C1B20;
+    /* background-color: #1C1B20; */
     color: white;
     font-family: sans-serif;
     /* height: 1200px; */
@@ -39,8 +39,54 @@ body {
     margin-top: 10px;
 }
 
+.user-profile {
+    display: flex;
+    margin-left: 50px;
+}
+
+.userinfo {
+    margin-left: 10px;
+}
+
+.userinfo h4 {
+    color: rgba(247, 244, 244, 0.801);
+}
+
+.userinfo p {
+    color: rgba(247, 244, 244, 0.801);
+}
+
+.user-profile img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+
 .search-bar {
     margin-top: 40px;
+
+}
+
+.search-bar input::placeholder {
+    color: rgba(247, 244, 244, 0.801);
+    margin-right: 30px !important;
+
+}
+
+.input-group-prepend {
+    position: absolute;
+    left: 6px;
+    top: 18px;
+    z-index: 1;
+
+}
+
+.input-group-text {
+    background: transparent;
+    color: rgba(247, 244, 244, 0.801);
+    border: none;
+    padding: 0;
+    margin-left: 10px;
 
 }
 
@@ -52,12 +98,31 @@ body {
     border-radius: unset;
 }
 
-.search-bar input::placeholder {
-    color: rgb(247, 244, 244);
-}
-
 .form-inline {
     display: flex;
     justify-content: flex-end;
     margin-right: 40px;
+}
+
+.main-table {
+    margin-right: 40px;
+}
+
+.table {
+    background-color: #1C1B20;
+}
+
+.table-button {
+    display: flex;
+}
+
+.table-button button {
+    background-color: #6377FC;
+    border: none;
+    border-radius: 5px;
+    width: 40%;
+    height: 48px;
+    color: rgba(247, 244, 244, 0.801);
+
+    font-size: large;
 }
