--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,5 +1,5 @@
 body {
-    /* background-color: #1C1B20; */
+    background-color: #1C1B20;
     color: white;
     font-family: sans-serif;
     /* height: 1200px; */
@@ -125,4 +125,21 @@ body {
     color: rgba(247, 244, 244, 0.801);
 
     font-size: large;
+}
+
+/* CSS for Home component */
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    z-index: 1;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
