Action button Added in table

--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -144,3 +144,10 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.toggle-button {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
