--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -12,13 +12,48 @@ body {
 
 }
 
-.logoName h4 {
+/* .logoName h4 {
     display: flex;
     justify-content: flex-start;
-    margin-left: 40px;
-    margin-top: 10px;
 
+   
+
+} */
+
+@media (min-width: 992px) {
+
+    .logoName {
+        justify-content: flex-start !important;
+        margin-top: 10px;
+
+        /* Reset justify-content for large screens */
+    }
 }
+
+@media (min-width: 992px) {
+    .profile-container {
+        justify-content: flex-end !important;
+
+
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .logoName {
+        justify-content: flex-start !important;
+        margin-top: 10px;
+
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .profile-container {
+        justify-content: flex-end !important;
+
+    }
+}
+
+
 
 .profile {
     display: flex;
@@ -31,7 +66,7 @@ body {
     width: 50px;
     border-radius: 50px;
     position: relative;
-    margin-right: 40px;
+    /* margin-right: 40px; */
 }
 
 
@@ -44,8 +79,21 @@ body {
 
 .user-profile {
     display: flex;
-    margin-left: 50px;
+
 }
+
+
+@media (min-width: 992px) {
+    .user-profile {
+        justify-content: flex-start !important;
+
+    }
+}
+
+.searchBar {
+    margin-top: 20px;
+}
+
 
 .userinfo {
     margin-left: 10px;
@@ -53,6 +101,7 @@ body {
 
 .userinfo h4 {
     color: rgba(247, 244, 244, 0.801);
+    margin-top: 10px;
 }
 
 .userinfo p {
@@ -63,6 +112,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50px;
+    margin-top: 10px;
 }
 
 .search-bar {
@@ -107,8 +157,11 @@ body {
     margin-right: 40px;
 }
 
-.main-table {
-    margin-right: 40px;
+@media (min-width: 992px) {
+    .main-table {
+        margin-right: 2rem;
+        /* Adjust margin size as needed */
+    }
 }
 
 .table {
@@ -151,3 +204,54 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* .box {
+    width: 70px;
+    height: 47px;
+    background: #92B901;
+    color: #ffffff;
+    position: relative;
+    font-weight: bold;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    animation: animated_div 5s linear forwards;
+}
+
+@keyframes animated_div {
+    0% {
+        transform: rotate(0deg);
+        left: 0px;
+
+    }
+
+    25% {
+        transform: rotate(20deg);
+        left: 0px;
+
+    }
+
+    50% {
+        transform: rotate(0deg);
+        left: 500px;
+
+    }
+
+    55% {
+        transform: rotate(0deg);
+        left: 500px;
+
+    }
+
+    70% {
+        transform: rotate(0deg);
+        left: 500px;
+        background: #1ec7e6;
+    }
+
+    100% {
+        transform: rotate(-360deg);
+        left: 0px;
+
+    }
+} */
