--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -111,10 +111,10 @@ body {
     margin-top: 10px;
 }
 
-/* .searchBar {
-    margin-top: 20px;
+.searchBar {
+    margin-top: 10px;
 }
- */
+
 
 .userinfo {
     margin-left: 10px;
