--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -98,6 +98,20 @@ body {
     }
 }
 
+@media (max-width: 576px) {
+    .user-profile {
+        justify-content: center;
+
+    }
+}
+
+@media (max-width: 576px) {
+    .search-bar input::placeholder {
+        color: rgba(247, 244, 244, 0.801);
+    }
+}
+
+
 
 .user-profile {
     display: flex;
@@ -111,8 +125,32 @@ body {
     margin-top: 10px;
 }
 
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .searchBar {
+        width: 100%;
+
+
+    }
+}
+
+@media (max-width: 576px) {
+    .searchBar {
+        text-align: center;
+        width: 100%;
+        margin-bottom: 10px;
+
+    }
+
+    .searchBar input[type="search"] {
+        margin: auto;
+        display: block;
+
+    }
+}
+
 .searchBar {
     margin-top: 10px;
+
 }
 
 
