--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -168,8 +168,6 @@ body {
 }
 
 
-
-
 .search-bar {
     margin-top: 40px;
 
@@ -219,12 +217,43 @@ body {
     }
 }
 
-.table {
-    background-color: #1C1B20;
+/* Ensuring the table can scroll horizontally on small screens */
+.table-responsive {
+    overflow-x: auto;
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .main-table {
+        flex: 0 0 auto;
+        width: 135.666667%;
+    }
+}
+
+
+
+@media (max-width: 576px) {
+
+    .table-custom th,
+    .table-custom td {
+        padding: 0.5rem;
+        font-size: 0.8rem;
+    }
+
+
+}
+
 
 .table-button {
     display: flex;
+}
+
+@media (max-width: 576px) {
+
+    .table-button {
+        justify-content: center;
+    }
+
+
 }
 
 .table-button button {
@@ -236,6 +265,16 @@ body {
     color: rgba(247, 244, 244, 0.801);
 
     font-size: large;
+}
+
+@media (max-width: 576px) {
+
+    .table-button button {
+        width: 60%;
+
+    }
+
+
 }
 
 /* CSS for Home component */
