--- a/src/Components/menubar.css
+++ b/src/Components/menubar.css
@@ -1,14 +1,20 @@
+.side-bar {
+    margin-top: 50px;
+
+}
+
 .list {
     list-style: none;
 
 }
+
 
 .list li {
     /* border: 1px solid white; */
     display: flex;
     padding: 8px;
     height: 50px;
-    width: 75%;
+    width: 65%;
     transition: background-color 0.3s;
 }
 
@@ -26,7 +32,9 @@
 
 .list-item {
     align-items: center;
-    margin-bottom: 5px;
+    justify-content: flex-start;
+    margin-bottom: 10px;
+    margin-left: 30px;
 }
 
 .icon-style {
@@ -35,4 +43,6 @@
 
 .menu-text {
     margin-left: 10px;
+    min-width: none;
+
 }
