--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -117,7 +117,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50px;
-    margin-top: 10px;
+    margin-top: 21px;
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -292,55 +292,31 @@ body {
     justify-content: center;
     margin: 0;
     padding: 0;
+
 }
 
-/* .box {
-    width: 70px;
-    height: 47px;
-    background: #92B901;
-    color: #ffffff;
-    position: relative;
-    font-weight: bold;
-    font-size: 20px;
+/* Add custom styles for the menubar */
+.menubar-container {
+    position: absolute;
+    top: -26px;
+    right: 0;
+    background-color: #1C1B20;
+    z-index: 1;
     padding: 10px;
-    border-radius: 5px;
-    animation: animated_div 5s linear forwards;
+
 }
 
-@keyframes animated_div {
-    0% {
-        transform: rotate(0deg);
-        left: 0px;
+/* Adjust the user-profile styles to prevent layout issues */
+.user-profile {
+    position: relative;
+    /* Ensure the menubar is positioned relative to the user-profile */
+    padding: 10px;
+}
 
-    }
+/* Ensure the user info layout does not disappear when menubar is shown */
+.userinfo {
+    padding: 10px;
 
-    25% {
-        transform: rotate(20deg);
-        left: 0px;
+    background-color: #1C1B20;
 
-    }
-
-    50% {
-        transform: rotate(0deg);
-        left: 500px;
-
-    }
-
-    55% {
-        transform: rotate(0deg);
-        left: 500px;
-
-    }
-
-    70% {
-        transform: rotate(0deg);
-        left: 500px;
-        background: #1ec7e6;
-    }
-
-    100% {
-        transform: rotate(-360deg);
-        left: 0px;
-
-    }
-} */
+}
